--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
       >This page contains webassembly and javascript content, please enable javascript in your
       browser.</noscript
     >
-    <pre id="game-of-life-counter"></pre>
+    <pre id="game-of-life-stats"></pre>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
