--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,8 @@
     <noscript
       >This page contains webassembly and javascript content, please enable javascript in your
       browser.</noscript
-    >
+                >
+    <button id="play-pause"></button>
     <pre id="game-of-life-stats"></pre>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
