--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
       browser.</noscript
     >
     <button id="play-pause"></button>
+    <button id="randomize">Randomize</button>
+    <button id="clear">Clear</button>
     <span
       >Speed:
       <input id="speed" type="range" min="1" max="100" value="50" />
