--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 0.3em;
         justify-content: center;
       }
     </style>
