--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
         align-items: center;
         gap: 0.3em;
         justify-content: center;
+        background-color: linen;
       }
 
       #fps {
